crates/cella-features/src/snapshots/cella_features__dockerfile__tests__mixed_user_transitions.snap
---
source: crates/cella-features/src/dockerfile.rs
expression: result
---
ARG _DEV_CONTAINERS_BASE_IMAGE=ubuntu:22.04
ARG _DEV_CONTAINERS_IMAGE_USER=vscode
ARG _DEV_CONTAINERS_FEATURE_CONTENT_SOURCE

FROM $_DEV_CONTAINERS_BASE_IMAGE AS dev_containers_target_stage

USER root

COPY devcontainer-features.builtin.env /tmp/dev-container-features/devcontainer-features.builtin.env
RUN echo "_CONTAINER_USER_HOME=$( (command -v getent >/dev/null 2>&1 && getent passwd 'vscode' || grep -E '^vscode:' /etc/passwd || true) | cut -d: -f6)" >> /tmp/dev-container-features/devcontainer-features.builtin.env \
    && echo "_REMOTE_USER_HOME=$( (command -v getent >/dev/null 2>&1 && getent passwd 'vscode' || grep -E '^vscode:' /etc/passwd || true) | cut -d: -f6)" >> /tmp/dev-container-features/devcontainer-features.builtin.env

# Feature: root-tool (ghcr.io/example/root-tool:1)
COPY --chown=root:root root-tool/ /tmp/dev-container-features/root-tool/
RUN chmod -R 0755 /tmp/dev-container-features/root-tool \
    && cd /tmp/dev-container-features/root-tool \
    && chmod +x ./devcontainer-features-install.sh \
    && ./devcontainer-features-install.sh \
    && rm -rf /tmp/dev-container-features/root-tool

# Feature: user-tool (ghcr.io/example/user-tool:1)
COPY --chown=root:root user-tool/ /tmp/dev-container-features/user-tool/
RUN chmod -R 0755 /tmp/dev-container-features/user-tool \
    && cd /tmp/dev-container-features/user-tool \
    && chmod +x ./devcontainer-features-install.sh \
    && ./devcontainer-features-install.sh \
    && rm -rf /tmp/dev-container-features/user-tool

# Feature: another-root (ghcr.io/example/another-root:1)
COPY --chown=root:root another-root/ /tmp/dev-container-features/another-root/
RUN chmod -R 0755 /tmp/dev-container-features/another-root \
    && cd /tmp/dev-container-features/another-root \
    && chmod +x ./devcontainer-features-install.sh \
    && ./devcontainer-features-install.sh \
    && rm -rf /tmp/dev-container-features/another-root

RUN rm -rf /tmp/dev-container-features && chmod 1777 /tmp

ARG _DEV_CONTAINERS_IMAGE_USER
USER $_DEV_CONTAINERS_IMAGE_USER
