crates/cella-features/src/snapshots/cella_features__dockerfile__tests__multiple_features_in_order.snap
---
source: crates/cella-features/src/dockerfile.rs
expression: result
---
ARG _DEV_CONTAINERS_BASE_IMAGE=mcr.microsoft.com/devcontainers/base:ubuntu
ARG _DEV_CONTAINERS_IMAGE_USER=vscode
ARG _DEV_CONTAINERS_FEATURE_CONTENT_SOURCE

FROM mcr.microsoft.com/devcontainers/base:ubuntu AS dev_containers_target_stage

USER root

# Feature: node (ghcr.io/devcontainers/features/node:1)
COPY --chown=root:root node/ /tmp/dev-container-features/node/
RUN chmod +x /tmp/dev-container-features/node/install.sh \
    && cd /tmp/dev-container-features/node \
    && export VERSION="lts" \
    && ./install.sh

# Feature: python (ghcr.io/devcontainers/features/python:1)
COPY --chown=root:root python/ /tmp/dev-container-features/python/
RUN chmod +x /tmp/dev-container-features/python/install.sh \
    && cd /tmp/dev-container-features/python \
    && export VERSION="3.11" \
    && ./install.sh

# Cleanup
RUN rm -rf /tmp/dev-container-features

# Reset user
USER vscode
