crates/cella-features/src/snapshots/cella_features__dockerfile__tests__user_reset_at_end.snap
---
source: crates/cella-features/src/dockerfile.rs
expression: result
---
ARG _DEV_CONTAINERS_BASE_IMAGE=ubuntu:22.04
ARG _DEV_CONTAINERS_IMAGE_USER=vscode
ARG _DEV_CONTAINERS_FEATURE_CONTENT_SOURCE

FROM $_DEV_CONTAINERS_BASE_IMAGE AS dev_containers_target_stage

USER root

# Feature: tool (ghcr.io/example/tool:1)
COPY --chown=root:root tool/ /tmp/dev-container-features/tool/
RUN chmod +x /tmp/dev-container-features/tool/install.sh \
    && cd /tmp/dev-container-features/tool \
    && ./install.sh

# Cleanup
RUN rm -rf /tmp/dev-container-features

# Reset user
USER vscode
