crates/cella-features/src/snapshots/cella_features__dockerfile__tests__wrapper_script_content.snap
---
source: crates/cella-features/src/dockerfile.rs
expression: script
---
#!/bin/sh
set -e
cd /tmp/dev-container-features/node
chmod +x ./install.sh
set -a
. ../devcontainer-features.builtin.env
. ./devcontainer-features.env
set +a
./install.sh
