crates/cella-features/src/snapshots/cella_features__dockerfile__tests__wrapper_script_deprecated_feature.snap
---
source: crates/cella-features/src/dockerfile.rs
expression: script
---
#!/bin/sh
set -e

on_exit () {
	[ $? -eq 0 ] && exit
	echo 'ERROR: Feature "Node.js" (ghcr.io/devcontainers/features/node) failed to install! Look at the documentation at https://example.com/node for help troubleshooting this error.'
}

trap on_exit EXIT

echo ===========================================================================
echo '(!) WARNING: Using the deprecated Feature "ghcr.io/devcontainers/features/node". This Feature will no longer receive any further updates/support.'
echo 'Feature       : Node.js'
echo 'Description   : Installs Node.js'
echo 'Id            : ghcr.io/devcontainers/features/node'
echo 'Version       : 2.1.0'
echo 'Documentation : https://example.com/node'
echo 'Options       :'
echo ''
echo ===========================================================================

cd /tmp/dev-container-features/node
set -a
. ../devcontainer-features.builtin.env
. ./devcontainer-features.env
set +a

chmod +x ./install.sh
./install.sh
